# hashette

./: .gitignore  .scalafmt.conf  Makefile  README.md  build.sc  dune  dune-project  filesystem.ml  filesystem.mli  hashette.ml  hashette.opam  hashette_lib.ml  hashette_lib.mli
.github/workflows/: ci.yml  cicd.yml
hashette/app/src/nyub/hashette/app/: Main.scala
hashette/src/nyub/hashette/: GroupByHash.scala  Hashette.scala
hashette/test/resources/: tricky.txt
hashette/test/src/nyub/hashette/: AssertExtensions.scala  GroupByHashSuite.scala  HashetteSuite.scala
usage.t/: run.t
