(executable
 (public_name hashette)
 (name hashette)
 (modules hashette)
 (libraries core core_unix.command_unix filesystem hashette_lib digestif))

(library
 (name hashette_lib)
 (modules hashette_lib)
 (libraries filesystem digestif))

(library
 (name filesystem)
 (modules filesystem))

(cram
 (deps %{bin:hashette}))
